# machine-learning

./: README.md  pyproject.toml
Reinforcement Learning/: galaxian-agent.py  intro-to-gymnasium.py  q_blackjack.pkl  training-an-agent.py
src/ml/: linear_regression.py  metrics.py
src/ml/notes/: example_lin_reg.py  pca.ipynb  ridge_regression_accuracy.ipynb
src/ml/notes/Training Simple Machine Learning Algorithms for Classification/: adaline_perceptron_application.ipynb  adaptive_linear_neurons.ipynb  perceptron.ipynb
tests/: conftest.py  test_linear_regression.py
