[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ml"
version = "0.1.0"
description = "Machine learning utils"
authors = [{name="Your Name", email="you@example.com"}]
requires-python = ">=3.10"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]
